--- a/manifest.json
+++ b/manifest.json
@@ -23,6 +23,9 @@
     "48": "images/get_started48.png",
     "128": "images/get_started128.png"
   },
+
+  "options_page": "options.html",
+
   "content_scripts": [
     {
       "matches": ["*://twitter.com/*"],
