--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,7 @@
     "persistent": false
   },
   "page_action": {
+    "default_popup": "popup.html",
     "default_icon": {
       "16": "images/16.png",
       "32": "images/32.png",
